namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-document-generation-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-document-generation-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "public_move-and-improve"
    cloud-platform.justice.gov.uk/application: "HMPPS Document Generation"
    cloud-platform.justice.gov.uk/owner: "Move and Improve: moveandimprove@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-document-generation-api"
    cloud-platform.justice.gov.uk/team-name: "hmpps-move-and-improve"
    cloud-platform.justice.gov.uk/slack-alert-channel: "move-and-improve-alerts-non-prod"
